k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: automarket
  labels:
    app.kubernetes.io/part-of: automarket
